demo/deployment-single.yaml
apiVersion: v1
kind: Service
metadata:
  name: adc-sv
  labels:
    app: adc-sv
spec:
  selector:
    app: adc-app
  ports:
    - port: 8080  #80 포트 사용할 경우 외부 ip로만으로도 접근가능, 다른 port일 경우 port 까지 url주소에 표기 하여아함
      protocol: TCP
      targetPort: 8080
  #type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adc-dp
  labels:
    app: adc-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: adc-app
  template:
    metadata:
      name: adc-app-pod
      labels:
        app: adc-app
    spec:
      containers:
      - name: adc-app
        image: docker.io/parkkihong/silvergold799:v1.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
