demo/istio-ingress-gateway-single.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: adc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adc-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - adc-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /main
    - uri:
        exact: /index
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: adc-sv #붙을 서비스 이름 적기
        port:
          number: 8080
